<resources>
    <string name="app_name">Calculator1</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="plus1">+</string>
    <string name="dec1">.</string>
    <string name="eq1">=</string>
    <string name="s">S</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="min1">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="per1">%</string>
    <string name="div1">/</string>
    <string name="_01">0</string>
</resources>